# voxide

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
migrations/: 20251114083645_0001_init.down.sql  20251114083645_0001_init.up.sql
src/: crypto.rs  crypto_types.rs  db.rs  domain.rs  dto.rs  errors.rs  lib.rs  main.rs  models.rs  vault.rs
tests/: integration_tests.rs  vault_operations.rs
