[package]
name = "voxide"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
rpassword = "7.3"
secrecy = "0.10.3"
zeroize = "1.8"
rand = "0.9.2"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "time"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
rstest = "0.26.1"
pretty_assertions = "1.4"

